sanders: Add spectrum support
Signed-off-by: ronaxdevil <pratabidya.007@gmail.com>
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/overlay/packages/apps/Settings/res/values/bools.xml
+++ b/overlay/packages/apps/Settings/res/values/bools.xml
@@ -15,4 +15,7 @@
 
     <!-- Whether to add AGPS parameter settings -->
     <bool name="config_agps_enabled">true</bool>
+
+    <!-- Whether to display spectrum settings -->
+    <bool name="device_supports_spectrum">true</bool>
 </resources>
