sanders: don't let the maintainer string translate
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/overlay/packages/apps/DerpQuest/res/values/derpquest_strings.xml
+++ b/overlay/packages/apps/DerpQuest/res/values/derpquest_strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="maintainer_name">Mayur Varde</string>
-    <string name="maintainer_telegram">https://t.me/marshmello_61</string>
+    <string name="maintainer_name" translatable="false">Mayur Varde</string>
+    <string name="maintainer_telegram" translatable="false">https://t.me/marshmello_61</string>
 
 </resources>
