sanders: overlay: Enable HFP bluetooth support
Signed-off-by: Dybios <dibyajyoti.samal@gmail.com>
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1107,4 +1107,6 @@
          strictly needed. -->
     <bool name="config_sf_limitedAlpha">true</bool>
 
+    <!-- Boolean indicating if current platform supports HFP inband ringing -->
+    <bool name="config_bluetooth_hfp_inband_ringing_support">true</bool>
 </resources>
