sanders: MotoActions: adaptive icon color
Signed-off-by: Mayur <ultramayur123@gmail.com>

--- a/MotoActions/res/drawable/ic_settings_gestures_dashboard.xml
+++ b/MotoActions/res/drawable/ic_settings_gestures_dashboard.xml
@@ -20,7 +20,7 @@
   android:viewportWidth="24.0"
   android:viewportHeight="24.0">
  <path
-  android:fillColor="#FEFFFFFF"
+  android:fillColor="?android:attr/colorPrimary"
   android:strokeColor="#FFFEFEFE"
   android:strokeWidth="0.24"
   android:strokeLineJoin="round"
